[package]
name = "maidenhair"
version = "0.1.0"
edition = "2024"

[lib]
name = "maidenhair"
crate-type = ["cdylib"]

[dependencies]
# libc = "0.2.174"
sqlite3ext-sys = "0.0.1"

[dev-dependencies]
sqlx={version="0.8",features=["sqlite","runtime-async-std"]}
smol = "2.0.2"

[profile.release]
lto="fat"
panic="abort"
